[package]
name = "uds-socket"
version = "0.1.0"
authors = ["Yana Kadiyska <ykadiysk@akamai.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["signal", "fs", "net", "rt-multi-thread", "macros", "io-util", "time"] }
tokio-stream = "0.1.3"
nix = "0.19"
socket2 = {version = "0.3.19",  features = ["pair"]}
